--- a/blog_covid-19.html
+++ b/blog_covid-19.html
@@ -65,7 +65,7 @@
                                     <p style="display:flex; justify-content:center; font-size:40px; padding-top:24px; padding-bottom:24p"><span >&#8943;</span></p>
 
                                     <!-- Block Quote -->
-                                    <blockquote>The United States leads the world in numbers for COVID-19:<br> over 102 million cases and 1.1 million deaths</blockquote>
+                                    <blockquote>The United States leads the world in numbers for COVID-19:<br> Over 102 million cases and 1.1 million deaths</blockquote>
 
                                     <p>The United States leads the world in terms of the number of COVID-19 cases, with over 102 million cases,
                                         followed closely by China and India. France and Germany complete the top 5 countries with the most COVID-19 cases.
@@ -91,7 +91,7 @@
                                     <p>
                                         The high COVID-related death rates in Peru and Bosnia can be attributed to a key factors, including:
                                         <ul><!--li>Healthcare system capacity: The healthcare systems in both Peru and Bosnia have been struggling to keep up with the demand for medical care during the pandemic. Limited resources, including medical personnel and equipment, have made it difficult for these countries to provide adequate care to all those affected by COVID-19.</li-->
-                                        <li>Poverty: Poverty is another factor that has contributed to the high death rates in Peru and Bosnia. Many people in these countries live in poverty, and they may not have access to the medical care they need to recover from COVID-19.</li>
+                                        <li>Socioeconomic Status: Lower Socioeconomic status is another factor that has contributed to the high death rates in Peru and Bosnia. Many people in these countries live in poverty, and they may not have access to the medical care they need to recover from COVID-19.</li>
                                         <li>Age of the population: Both Peru and Bosnia have relatively older populations, which are more susceptible to severe illness and death from COVID-19.</li>
                                         <li>Chronic health conditions: Many people in both Peru and Bosnia suffer from chronic health conditions, such as diabetes and heart disease. These underlying health issues can increase the risk of severe illness and death from COVID-19.</li>
                                     <li>Limited access to vaccines: Both countries have faced challenges in securing and distributing COVID-19 vaccines, leaving many people unprotected against the virus.</li></ul>
